# github-mcp

./: .gitignore  README.md  pyproject.toml
src/github_mcp/: server.py
