[project]
name = "github-mcp"
version = "0.1.0"
description = ""
authors = [{ name = "Anuj Singla" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = ["fastmcp (>=3.4.2,<4.0.0)", "httpx (>=0.28.1,<0.29.0)"]

[tool.poetry]
packages = [{ include = "github_mcp", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
